name:                pure-tlc
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-tlc
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5
   
  exposed-modules:
    Pure.TLC
    Pure.TLC.Unindent

  hs-source-dirs: src

  default-language: Haskell2010