name:                pure-tlc
version:             0.8.0.0
homepage:            purehs.org/doc/pure-tlc
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-tlc.git

library
  build-depends:
    base
   
  exposed-modules:
    Pure.TLC
    Pure.TLC.Unindent

  hs-source-dirs: src

  default-language: Haskell2010
